--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
     </ol>
 
     <hr>
-    <hr width="50%">
 
     <dl> <!--The <dl> tag defines a description list.-->
         <!-- The <dl> tag is used in conjunction with <dt> (defines terms/names) and <dd> (describes each term/name) -->
@@ -94,5 +93,17 @@
         <dt>Milk</dt>
         <dd>White cold drink</dd>
     </dl>
+
+    <hr width="50%">
+
+    <h2>Top films review website</h2>
+    <ul>
+        <li><a href="https://www.metacritic.com/" target="_blank" title="Meta Cretic Top Movie" rel="nofollow">Meta Critic</li>
+        <!-- target="_blank": open in new tag ai browser-->
+        <!-- rel="nofollow": "nofollow" is used by Google, to specify that the Google search spider should not follow that link-->
+        <!-- title: Declare for SEO -->
+        <li><a href="https://www.imdb.com/" target="_blank" title="Top movie review">IMDB</a></li>
+    </ul>
+
 </body>
 </html>
